Adjusted workflow backend changes
Backend changes to adjust the workflow, create study -> write email -> filter participants

--- a/src/main/webapp/app/entities/study/study-detail.component.html
+++ b/src/main/webapp/app/entities/study/study-detail.component.html
@@ -12,15 +12,17 @@
         <dd>
             <span>{{study.incentive}}</span>
         </dd>
-        <dt><span>Paid</span></dt>
+        <dt><span>Email</span></dt>
         <dd>
-            <span>{{study.hasPay}}</span>
+            <div *ngIf="study.email">
+                <a [routerLink]="['/email', study.email?.id]">{{study.email?.subject}}</a>
+            </div>
         </dd>
         <dt><span>User</span></dt>
         <dd>
             {{study.user?.login}}
         </dd>
-        <dt><span>Participants</span></dt>
+        <dt><span>Participant</span></dt>
         <dd>
             <span *ngFor="let participant of study.participants; let last = last">
                 <a [routerLink]="['/participant', participant?.id ]">{{participant.email}}</a>{{last ? '' : ', '}}
