--- a/src/main/webapp/app/entities/participant/participant.component.html
+++ b/src/main/webapp/app/entities/participant/participant.component.html
@@ -3,7 +3,7 @@
         <span>Participants</span>
         <button *jhiHasAnyAuthority="'ROLE_ADMIN'" class="btn btn-primary float-right jh-create-entity create-participant" [routerLink]="['/', { outlets: { popup: ['participant-new'] } }]">
             <span class="fa fa-plus"></span>
-            <span>
+            <span >
             Create new Participant
             </span>
         </button>
@@ -42,25 +42,27 @@
             <div class="table-responsive" *ngIf="participants">
                 <table class="table table-striped">
                     <thead>
-                    <tr>
-                        <th><span>Email</span></th>
-                        <th><span>Occupation</span></th>
-                        <th><span>Location</span></th>
-                        <th><span>Programming Language</span></th>
-                        <th><span>Number Of Contributions</span></th>
-                        <th><span>Number Of Repositories</span></th>
+                    <tr jhiSort [(predicate)]="predicate" [(ascending)]="reverse" [callback]="reset.bind(this)">
+                        <th jhiSortBy="id"><span>ID</span> <span class="fa fa-sort"></span></th>
+                        <th jhiSortBy="email"><span>Email</span> <span class="fa fa-sort"></span></th>
+                        <th jhiSortBy="occupation"><span>Occupation</span> <span class="fa fa-sort"></span></th>
+                        <th jhiSortBy="location"><span>Location</span> <span class="fa fa-sort"></span></th>
+                        <th jhiSortBy="programmingLanguage"><span>Programming Language</span> <span class="fa fa-sort"></span></th>
+                        <th jhiSortBy="numberOfContributions"><span>Number Of Contributions</span> <span class="fa fa-sort"></span></th>
+                        <th jhiSortBy="numberOfRepositories"><span>Number Of Repositories</span> <span class="fa fa-sort"></span></th>
                         <th></th>
                     </tr>
                     </thead>
-                    <tbody>
-                    <tr *ngFor="let participant of participants | participant:filter ;trackBy: trackId">
-                        <td><a [routerLink]="['../participant', participant.id ]">{{participant.email}}</a></td>
+                    <tbody infinite-scroll (scrolled)="loadPage(page + 1)" [infiniteScrollDisabled]="page >= links['last']" [infiniteScrollDistance]="0">
+                    <tr *ngFor="let participant of participants ;trackBy: trackId">
+                        <td><a [routerLink]="['../participant', participant.id ]">{{participant.id}}</a></td>
+                        <td>{{participant.email}}</td>
                         <td>{{participant.occupation}}</td>
                         <td>{{participant.location}}</td>
                         <td>{{participant.programmingLanguage}}</td>
                         <td>{{participant.numberOfContributions}}</td>
                         <td>{{participant.numberOfRepositories}}</td>
-                        <td *jhiHasAnyAuthority="'ROLE_ADMIN'" class="text-right">
+                        <td class="text-right">
                             <div class="btn-group flex-btn-group-container">
                                 <button type="submit"
                                         [routerLink]="['../participant', participant.id ]"
