--- a/src/main/webapp/app/entities/study/study-dialog.component.html
+++ b/src/main/webapp/app/entities/study/study-dialog.component.html
@@ -28,14 +28,14 @@
             <textarea class="form-control" name="incentive" id="field_incentive"
                 [(ngModel)]="study.incentive"  ></textarea>
         </div>
-        <div class="form-check">
-            <label class="form-check-label" for="field_hasPay">
-                <input type="checkbox" class="form-check-input" name="hasPay" id="field_hasPay"
-                       [(ngModel)]="study.hasPay"/>
-                Paid
-            </label>
-        </div>
 
+        <div class="form-group">
+            <label for="field_email">Email</label>
+            <select class="form-control" id="field_email" name="email" [(ngModel)]="study.email">
+                <option [ngValue]="null"></option>
+                <option [ngValue]="emailOption.id === study.email?.id ? study.email : emailOption" *ngFor="let emailOption of emails; trackBy: trackEmailById">{{emailOption.subject}}</option>
+            </select>
+        </div>
         <div class="form-group">
             <label for="field_user">User</label>
             <select class="form-control" id="field_user" name="user" [(ngModel)]="study.user" >
