Updated participants workflow

--- a/src/main/webapp/app/entities/email/email-dialog.component.html
+++ b/src/main/webapp/app/entities/email/email-dialog.component.html
@@ -30,7 +30,7 @@
             <span class="fa fa-ban"></span>&nbsp;<span>Cancel</span>
         </button>
         <button type="submit" [disabled]="editForm.form.invalid || isSaving" routerLink="participant" class="btn btn-primary">
-            <span class="fa fa-save"></span>&nbsp;<span>Next</span>
+            <span class="fa fa-arrow-right"></span>&nbsp;<span>Next</span>
         </button>
     </div>
 </form>
