--- a/src/main/webapp/app/entities/participant/participant.component.html
+++ b/src/main/webapp/app/entities/participant/participant.component.html
@@ -1,6 +1,12 @@
 <div>
     <h2>
         <span>Participants</span>
+        <button class="btn btn-secondary float-right jh-create-entity create-participant" routerLink="./study">
+            <span class="fa fa-arrow-right"></span>
+            <span >
+            Go To Studies
+            </span>
+        </button>
         <button *jhiHasAnyAuthority="'ROLE_ADMIN'" class="btn btn-primary float-right jh-create-entity create-participant" [routerLink]="['/', { outlets: { popup: ['participant-new'] } }]">
             <span class="fa fa-plus"></span>
             <span >
@@ -43,7 +49,6 @@
                 <table class="table table-striped">
                     <thead>
                     <tr jhiSort [(predicate)]="predicate" [(ascending)]="reverse" [callback]="reset.bind(this)">
-                        <th jhiSortBy="id"><span>ID</span> <span class="fa fa-sort"></span></th>
                         <th jhiSortBy="email"><span>Email</span> <span class="fa fa-sort"></span></th>
                         <th jhiSortBy="occupation"><span>Occupation</span> <span class="fa fa-sort"></span></th>
                         <th jhiSortBy="location"><span>Location</span> <span class="fa fa-sort"></span></th>
@@ -55,8 +60,7 @@
                     </thead>
                     <tbody infinite-scroll (scrolled)="loadPage(page + 1)" [infiniteScrollDisabled]="page >= links['last']" [infiniteScrollDistance]="0">
                     <tr *ngFor="let participant of participants ;trackBy: trackId">
-                        <td><a [routerLink]="['../participant', participant.id ]">{{participant.id}}</a></td>
-                        <td>{{participant.email}}</td>
+                        <td><a [routerLink]="['../participant', participant.id ]">{{participant.email}}</a></td>
                         <td>{{participant.occupation}}</td>
                         <td>{{participant.location}}</td>
                         <td>{{participant.programmingLanguage}}</td>
