--- a/src/main/webapp/app/entities/study/study-dialog.component.html
+++ b/src/main/webapp/app/entities/study/study-dialog.component.html
@@ -55,7 +55,7 @@
             <span class="fa fa-ban"></span>&nbsp;<span>Cancel</span>
         </button>
         <button type="submit" [disabled]="editForm.form.invalid || isSaving" [routerLink]="['/', { outlets: { popup: ['email-new'] } }]" class="btn btn-primary">
-            <span class="fa fa-save"></span>&nbsp;<span>Next</span>
+            <span class="fa fa-arrow-right"></span>&nbsp;<span>Next</span>
         </button>
     </div>
 </form>
