--- a/src/main/webapp/app/entities/study/study-dialog.component.html
+++ b/src/main/webapp/app/entities/study/study-dialog.component.html
@@ -28,14 +28,23 @@
             <textarea class="form-control" name="incentive" id="field_incentive"
                 [(ngModel)]="study.incentive"  ></textarea>
         </div>
-
         <div class="form-group">
-            <label for="field_email">Email</label>
-            <select class="form-control" id="field_email" name="email" [(ngModel)]="study.email">
-                <option [ngValue]="null"></option>
-                <option [ngValue]="emailOption.id === study.email?.id ? study.email : emailOption" *ngFor="let emailOption of emails; trackBy: trackEmailById">{{emailOption.subject}}</option>
-            </select>
+            <label class="form-control-label" for="field_emailSubject">Email Subject</label>
+            <input type="text" class="form-control" name="emailSubject" id="field_emailSubject"
+                [(ngModel)]="study.emailSubject" required />
+            <div [hidden]="!(editForm.controls.emailSubject?.dirty && editForm.controls.emailSubject?.invalid)">
+                <small class="form-text text-danger"
+                   [hidden]="!editForm.controls.emailSubject?.errors?.required">
+                   This field is required.
+                </small>
+            </div>
         </div>
+        <div class="form-group">
+            <label class="form-control-label" for="field_emailBody">Email Body</label>
+            <textarea class="form-control" name="emailBody" id="field_emailBody"
+                [(ngModel)]="study.emailBody"  ></textarea>
+        </div>
+
         <div class="form-group">
             <label for="field_user">User</label>
             <select class="form-control" id="field_user" name="user" [(ngModel)]="study.user" >
@@ -54,8 +63,8 @@
         <button type="button" class="btn btn-default" data-dismiss="modal" (click)="clear()">
             <span class="fa fa-ban"></span>&nbsp;<span>Cancel</span>
         </button>
-        <button type="submit" [disabled]="editForm.form.invalid || isSaving" [routerLink]="['/', { outlets: { popup: ['email-new'] } }]" class="btn btn-primary">
-            <span class="fa fa-arrow-right"></span>&nbsp;<span>Next</span>
+        <button type="submit" [disabled]="editForm.form.invalid || isSaving" class="btn btn-primary">
+            <span class="fa fa-save"></span>&nbsp;<span>Save</span>
         </button>
     </div>
 </form>
