--- a/src/main/webapp/app/entities/study/study.component.html
+++ b/src/main/webapp/app/entities/study/study.component.html
@@ -19,7 +19,8 @@
             <th jhiSortBy="name"><span>Name</span> <span class="fa fa-sort"></span></th>
             <th jhiSortBy="description"><span>Description</span> <span class="fa fa-sort"></span></th>
             <th jhiSortBy="incentive"><span>Incentive</span> <span class="fa fa-sort"></span></th>
-            <th jhiSortBy="email.subject"><span>Email</span> <span class="fa fa-sort"></span></th>
+            <th jhiSortBy="emailSubject"><span>Email Subject</span> <span class="fa fa-sort"></span></th>
+            <th jhiSortBy="emailBody"><span>Email Body</span> <span class="fa fa-sort"></span></th>
             <th jhiSortBy="user.login"><span>User</span> <span class="fa fa-sort"></span></th>
             <th></th>
             </tr>
@@ -29,11 +30,8 @@
                 <td><a [routerLink]="['../study', study.id ]">{{study.name}}</a></td>
                 <td>{{study.description}}</td>
                 <td>{{study.incentive}}</td>
-                <td>
-                    <div *ngIf="study.email">
-                        <a [routerLink]="['../email', study.email?.id ]" >{{study.email?.subject}}</a>
-                    </div>
-                </td>
+                <td>{{study.emailSubject}}</td>
+                <td>{{study.emailBody}}</td>
                 <td>
                     {{study.user?.login}}
                 </td>
