--- a/src/main/webapp/app/entities/study/study-dialog.component.html
+++ b/src/main/webapp/app/entities/study/study-dialog.component.html
@@ -29,34 +29,44 @@
                 [(ngModel)]="study.incentive"  ></textarea>
         </div>
         <div class="form-group">
-            <label class="form-control-label" for="field_emailSubject">Email Subject</label>
-            <input type="text" class="form-control" name="emailSubject" id="field_emailSubject"
-                [(ngModel)]="study.emailSubject" required />
-            <div [hidden]="!(editForm.controls.emailSubject?.dirty && editForm.controls.emailSubject?.invalid)">
-                <small class="form-text text-danger"
-                   [hidden]="!editForm.controls.emailSubject?.errors?.required">
-                   This field is required.
-                </small>
-            </div>
-        </div>
-        <div class="form-group">
-            <label class="form-control-label" for="field_emailBody">Email Body</label>
-            <textarea class="form-control" name="emailBody" id="field_emailBody"
-                [(ngModel)]="study.emailBody"  ></textarea>
-        </div>
-
-        <div class="form-group">
-            <label for="field_user">User</label>
-            <select class="form-control" id="field_user" name="user" [(ngModel)]="study.user" >
+            <label for="field_user">Please select your user login</label>
+            <select class="form-control" id="field_user" name="user" [(ngModel)]="study.user" required>
                 <option [ngValue]="null"></option>
                 <option [ngValue]="userOption.id === study.user?.id ? study.user : userOption" *ngFor="let userOption of users; trackBy: trackUserById">{{userOption.login}}</option>
             </select>
+            <div [hidden]="!(editForm.controls.user?.dirty && editForm.controls.user?.invalid)">
+                <small class="form-text text-danger"
+                       [hidden]="!editForm.controls.user?.errors?.required">
+                    This field is required.
+                </small>
+            </div>
         </div>
         <div class="form-group">
             <label for="field_participant">Participants</label>
             <select class="form-control" id="field_participant" multiple name="participant" [(ngModel)]="study.participants">
                 <option [ngValue]="getSelected(study.participants, participantOption)" *ngFor="let participantOption of participants; trackBy: trackParticipantById">{{participantOption.email}}</option>
             </select>
+        </div>
+    </div>
+    <div class="modal-header">
+        <h4 class="modal-title" id="myEmailLabel">Draft Invitation Email</h4>
+    </div>
+    <div class="modal-body">
+        <div class="form-group">
+            <label class="form-control-label" for="field_emailSubject">Subject</label>
+            <input type="text" class="form-control" name="emailSubject" id="field_emailSubject"
+                   [(ngModel)]="study.emailSubject" required />
+            <div [hidden]="!(editForm.controls.emailSubject?.dirty && editForm.controls.emailSubject?.invalid)">
+                <small class="form-text text-danger"
+                       [hidden]="!editForm.controls.emailSubject?.errors?.required">
+                    This field is required.
+                </small>
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="form-control-label" for="field_emailBody">Body</label>
+            <textarea class="form-control" name="emailBody" id="field_emailBody"
+                      [(ngModel)]="study.emailBody"  ></textarea>
         </div>
     </div>
     <div class="modal-footer">
