Updated links to study component

--- a/src/main/webapp/app/entities/participant/participant.component.html
+++ b/src/main/webapp/app/entities/participant/participant.component.html
@@ -1,7 +1,7 @@
 <div>
     <h2>
         <span>Participants</span>
-        <button class="btn btn-secondary float-right jh-create-entity create-participant" routerLink="../study">
+        <button class="btn btn-primary float-right jh-create-entity create-participant" routerLink="../study">
             <span class="fa fa-arrow-right"></span>
             <span >
             Go To Studies
