--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -3,6 +3,12 @@
         <span class="hipster img-fluid img-rounded"></span>
     </div>
     <div class="col-md-9">
+        <button class="btn btn-primary float-right jh-create-entity create-participant" routerLink="../study">
+            <span class="fa fa-arrow-right"></span>
+            <span >
+            Go To Studies
+            </span>
+        </button>
         <h1 class="display-4">QualOpt</h1>
         <p class="lead"></p>
 
