Added text to homepage

--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -30,16 +30,18 @@
         </div>
 
         <p>
-            Benefits of QualOpt:
+            QualOpt is a platform for researchers to manager their research studies and find participants to send survey invitations to.
+            Additionally, participants have the ability to opt in or out of receiving survey invitations.
+        </p>
+        <p>
+            Benefits include:
         </p>
 
         <ul>
             <li>Support Researchers</li>
             <li>Supports GitHub users</li>
-            <li>Security</li>
+            <li>Added security for survey management</li>
         </ul>
-
-        <p></p>
 
         <a href="https://github.com/">Link to GitHub for visitors</a>
     </div>
