Updated Study POST method
Updated the study POST method to add the current user and removed that field from study-dialog component

--- a/src/main/webapp/app/entities/study/study-dialog.component.html
+++ b/src/main/webapp/app/entities/study/study-dialog.component.html
@@ -30,16 +30,10 @@
         </div>
         <div class="form-group">
             <label for="field_user">Please select your user login</label>
-            <select class="form-control" id="field_user" name="user" [(ngModel)]="study.user" required>
+            <select class="form-control" id="field_user" name="user" [(ngModel)]="study.user">
                 <option [ngValue]="null"></option>
                 <option [ngValue]="userOption.id === study.user?.id ? study.user : userOption" *ngFor="let userOption of users; trackBy: trackUserById">{{userOption.login}}</option>
             </select>
-            <div [hidden]="!(editForm.controls.user?.dirty && editForm.controls.user?.invalid)">
-                <small class="form-text text-danger"
-                       [hidden]="!editForm.controls.user?.errors?.required">
-                    This field is required.
-                </small>
-            </div>
         </div>
         <div class="form-group">
             <label for="field_participant">Participants</label>
