--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -30,19 +30,22 @@
         </div>
 
         <p>
-            QualOpt is a platform for researchers to manager their research studies and find participants to send survey invitations to.
-            Additionally, participants have the ability to opt in or out of receiving survey invitations.
-        </p>
-        <p>
-            Benefits include:
+            <!-- TODO: About QualOpt here -->
         </p>
 
-        <ul>
-            <li>Support Researchers</li>
-            <li>Supports GitHub users</li>
-            <li>Added security for survey management</li>
-        </ul>
-
-        <a href="https://github.com/">Link to GitHub for visitors</a>
+        <div class="row">
+            <div class="col-6">
+                <h2>For Researchers</h2>
+                <p>
+                    <!-- TODO: Researcher info here -->
+                </p>
+            </div>
+            <div class="col-6">
+                <h2>For Study Participants</h2>
+                <p>
+                    <!-- TODO: Participant info here -->
+                </p>
+            </div>
+        </div>
     </div>
 </div>
