--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -30,6 +30,9 @@
         </div>
 
         <p>
+            QualOpt is a platform for researchers to manage the survey invitations for their studies, and find participants to send them to via GitHub.
+            It also provides the ability for GitHub users to opt out of receiving survey invitations.
+            The goal of this is to address the issue of GitHub users receiving too many unsolicited survey invitations
             <!-- TODO: About QualOpt here -->
         </p>
 
@@ -37,12 +40,16 @@
             <div class="col-6">
                 <h2>For Researchers</h2>
                 <p>
+                    Researchers can use this application to send out survey invitations in moderation.
+                    You can create a study on the application, with details of your survey and draft the email to be sent to your participants.
+                    Additionally, you can filter the participants who will receive the survey invitations using information from GitHub
                     <!-- TODO: Researcher info here -->
                 </p>
             </div>
             <div class="col-6">
                 <h2>For Study Participants</h2>
                 <p>
+                    Participants may choose to opt out of receiving survey invitations
                     <!-- TODO: Participant info here -->
                 </p>
             </div>
