Fix issue with participants filter
The pipe had been accidentally overwritten in a previous commit. This has been fixed. I have also changed the numerical filter to work for a minimum value not just number matching

--- a/src/main/webapp/app/entities/participant/participant.component.html
+++ b/src/main/webapp/app/entities/participant/participant.component.html
@@ -59,7 +59,7 @@
                     </tr>
                     </thead>
                     <tbody infinite-scroll (scrolled)="loadPage(page + 1)" [infiniteScrollDisabled]="page >= links['last']" [infiniteScrollDistance]="0">
-                    <tr *ngFor="let participant of participants ;trackBy: trackId">
+                    <tr *ngFor="let participant of participants | participant:filter ;trackBy: trackId">
                         <td><a [routerLink]="['../participant', participant.id ]">{{participant.email}}</a></td>
                         <td>{{participant.occupation}}</td>
                         <td>{{participant.location}}</td>
