--- a/src/main/webapp/app/account/password/password.component.html
+++ b/src/main/webapp/app/account/password/password.component.html
@@ -13,11 +13,24 @@
             <div class="alert alert-danger" *ngIf="doNotMatch">
                 The password and its confirmation do not match!
             </div>
-
+            <div class="alert alert-danger" *ngIf="wrongPassword">
+                    Incorrect Password Entered!
+                </div>
             <form name="form" role="form" (ngSubmit)="changePassword()" #passwordForm="ngForm">
-
+                    <div class="form-group">
+                            <label class="form-control-label" for="password">Current password</label>
+                            <input type="password" class="form-control" id="currentPassword" name="password" #passwordInput="ngModel"
+                            placeholder="Current password"
+                                   [(ngModel)]="currentPassword" minlength=4 maxlength=50 required>
+                            <div *ngIf="passwordInput.dirty && passwordInput.invalid">
+                                <small class="form-text text-danger"
+                                   *ngIf="passwordInput.errors.required">
+                                    Your password is required.
+                                </small>
+                            </div>
+                    </div>
                 <div class="form-group">
-                    <label class="form-control-label" for="password">New password</label>
+                    <label class="form-control-label" for="password"> New password</label>
                     <input type="password" class="form-control" id="password" name="password" #passwordInput="ngModel"
                     placeholder="New password"
                            [(ngModel)]="password" minlength=4 maxlength=50 required>
