Issue #6 - Routing a popup modal to confirm that the user wants to send an invitation

--- a/src/main/webapp/app/entities/study/study-detail.component.html
+++ b/src/main/webapp/app/entities/study/study-detail.component.html
@@ -41,7 +41,7 @@
     </button>
 
     <button type="button"
-            [routerLink]="['#']"
+            [routerLink]="['/', { outlets: { popup: 'study/'+ study.id + '/confirmSend'} }]"
             replaceUrl="true"
             class="btn btn-success">
         <span class="fa fa-paper-plane"></span>&nbsp;<span> Send Invitation</span>
