--- a/src/main/webapp/app/entities/study/study-detail.component.html
+++ b/src/main/webapp/app/entities/study/study-detail.component.html
@@ -40,10 +40,18 @@
         <span class="fa fa-pencil"></span>&nbsp;<span> Edit</span>
     </button>
 
+    <button type="submit"
+            [routerLink]="['/', { outlets: { popup: 'study/'+ study.id + '/delete'} }]"
+            replaceUrl="true"
+            class="btn btn-danger">
+        <span class="fa fa-remove"></span>&nbsp;<span class="hidden-md-down">Delete</span>
+    </button>
+
     <button type="button"
             [routerLink]="['#']"
             replaceUrl="true"
             class="btn btn-success">
         <span class="fa fa-paper-plane"></span>&nbsp;<span> Send Invitation</span>
     </button>
+
 </div>
