--- a/src/main/webapp/app/account/password-reset/init/password-reset-init.component.html
+++ b/src/main/webapp/app/account/password-reset/init/password-reset-init.component.html
@@ -18,7 +18,7 @@
             <form *ngIf="!success" name="form" role="form" (ngSubmit)="requestReset()" #resetRequestForm="ngForm">
                 <div class="form-group">
                     <label class="form-control-label" for="email">Email</label>
-                    <input type="email" class="form-control" id="email" name="email" placeholder="Your email"
+                    <input type="email" class="form-control" id="email" name="email" placeholder="Your email" ngModel [email]="true"
                            [(ngModel)]="resetAccount.email" minlength=5 maxlength=100 #emailInput="ngModel" required>
                     <div *ngIf="emailInput.dirty && emailInput.invalid">
                         <small class="form-text text-danger"
@@ -26,7 +26,7 @@
                             Your email is required.
                         </small>
                         <small class="form-text text-danger"
-                           *ngIf="emailInput.errors.email">
+                           *ngIf="emailInput.errors.email && !emailInput.errors.required && !emailInput.errors.minlength && !emailInput.errors.maxlength">
                             Your email is invalid.
                         </small>
                         <small class="form-text text-danger"
