--- a/src/main/webapp/app/account/settings/settings.component.html
+++ b/src/main/webapp/app/account/settings/settings.component.html
@@ -51,7 +51,7 @@
                 </div>
                 <div class="form-group">
                     <label class="form-control-label" for="email">Email</label>
-                    <input type="email" class="form-control" id="email" name="email" placeholder="Your email"
+                    <input type="email" class="form-control" id="email" name="email" placeholder="Your email" ngModel [email]="true"
                            [(ngModel)]="settingsAccount.email" minlength="5" maxlength="100" #emailInput="ngModel" required>
                     <div *ngIf="emailInput.dirty && emailInput.invalid">
                         <small class="form-text text-danger"
@@ -59,7 +59,7 @@
                             Your email is required.
                         </small>
                         <small class="form-text text-danger"
-                           *ngIf="emailInput.errors.email">
+                           *ngIf="emailInput.errors.email && !emailInput.errors.required && !emailInput.errors.minlength && !emailInput.errors.maxlength">
                             Your email is invalid.
                         </small>
                         <small class="form-text text-danger"
