Link MailService to Send Invitation button; still have authentication problem.
- Create new REST endpoint POST /api/studies/send for sending a study using MailService object.
- Create new method MailService#sendInvitationEmail() for sending a study.
- Link new POST endpoint to Send Invitation button via study-detail.component#sendInvitation() and study.service#send().

--- a/src/main/webapp/app/entities/study/study-detail.component.html
+++ b/src/main/webapp/app/entities/study/study-detail.component.html
@@ -41,8 +41,7 @@
     </button>
 
     <button type="button"
-            [routerLink]="['#']"
-            replaceUrl="true"
+            (click)="sendInvitation()"
             class="btn btn-success">
         <span class="fa fa-paper-plane"></span>&nbsp;<span> Send Invitation</span>
     </button>
