Added login through GitHub and created a Participant Opt-Out service
Added dependency for github factory

Added github login and register buttons

Added github login functionality

Added participant role for login

Added new field for opting in and out for participants

Ability to search participants via email

Fixed email query issue

Added view for participant-settings

Studies now only show opted in participants

Put participant-settings back into participant folder to work with existing routing

Added view for opting in and out of individual studies

Added naive string version of incentives

Linking account into participant creation and fixing tests

Fixed issue with merge

Added functionality to individually optout of studies

General cleaning up and comments

Added ability to login as participant through normal registration (not just social)

Removed secrets from repo

Fixed issue with rebase

Added extra unit tests for participants

Cleaned up POM file

Fixed issue with merge

--- a/src/main/webapp/app/account/register/register.component.html
+++ b/src/main/webapp/app/account/register/register.component.html
@@ -124,6 +124,7 @@
             <jhi-social *ngIf="!success" provider="google"></jhi-social>
             <jhi-social *ngIf="!success" provider="facebook"></jhi-social>
             <jhi-social *ngIf="!success" provider="twitter"></jhi-social>
+            <jhi-social *ngIf="!success" provider="github"></jhi-social>
             <!-- jhipster-needle-add-social-button -->
         </div>
     </div>
