--- a/src/main/webapp/app/shared/login/login.component.html
+++ b/src/main/webapp/app/shared/login/login.component.html
@@ -44,6 +44,7 @@
             <jhi-social provider="google"></jhi-social>
             <jhi-social provider="facebook"></jhi-social>
             <jhi-social provider="twitter"></jhi-social>
+            <jhi-social provider="github"></jhi-social>
             <!-- jhipster-needle-add-social-button -->
         </div>
     </div>
