Add ability to copy a study

--- a/src/main/webapp/app/entities/study/study.component.html
+++ b/src/main/webapp/app/entities/study/study.component.html
@@ -43,6 +43,13 @@
                       <span class="fa fa-pencil"></span>
                       <span class="hidden-md-down">Edit</span>
                   </button>
+                  <button type="submit" 
+                          [routerLink]="['/', { outlets: { popup: 'study/'+ study.id + '/copy'} }]" 
+                          replaceUrl="true" 
+                          class="btn btn-success btn-sm">
+                    <span class="fa fa-copy"></span>
+                    <span class="hidden-md-down">Copy</span>
+                  </button>
                   <button type="submit"
                           [routerLink]="['/', { outlets: { popup: 'study/'+ study.id + '/delete'} }]"
                           replaceUrl="true"
