--- a/src/main/webapp/app/entities/study/study-dialog.component.html
+++ b/src/main/webapp/app/entities/study/study-dialog.component.html
@@ -1,6 +1,6 @@
 <form name="editForm" role="form" novalidate (ngSubmit)="save()" #editForm="ngForm">
     <ngb-tabset>
-        <ngb-tab title="Main">
+        <ngb-tab id="studyTab" title="Study Details">
             <ng-template ngbTabContent>
                 <div class="modal-header">
                     <h4 class="modal-title" id="myStudyLabel">Create or edit a Study</h4>
@@ -31,10 +31,16 @@
                             <option [ngValue]="getSelected(study.participants, participantOption)" *ngFor="let participantOption of participants; trackBy: trackParticipantById">{{participantOption.email}}</option>
                         </select>
                     </div>
-              </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary" data-dismiss="modal" (click)="changeTab('emailTab')">
+                        <span>Next</span>
+                        <span class="fa fa-arrow-right"></span>&nbsp;
+                    </button>
+                </div>
             </ng-template>
         </ngb-tab>
-        <ngb-tab title="Invitation Email">
+        <ngb-tab id="emailTab" title="Invitation Email">
             <ng-template ngbTabContent>
                 <div class="modal-header">
                     <h4 class="modal-title" id="myEmailLabel">Draft Invitation Email</h4>
@@ -52,11 +58,15 @@
                     </div>
                     <div class="form-group">
                         <label class="form-control-label" for="field_emailBody">Body</label>
-                        <textarea class="form-control emailBody" name="emailBody" id="field_emailBody" [(ngModel)]="study.emailBody"></textarea>
+                        <textarea class="form-control email-body" name="emailBody" id="field_emailBody" [(ngModel)]="study.emailBody"></textarea>
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal" (click)="clear()">
+                    <button type="button" class="btn btn-primary" data-dismiss="modal" (click)="changeTab('studyTab')">
+                        <span class="fa fa-arrow-left"></span>&nbsp;
+                        <span>Previous</span>
+                    </button>
+                    <button type="button" class="btn btn-danger" data-dismiss="modal" (click)="clear()">
                         <span class="fa fa-ban"></span>&nbsp;
                         <span>Cancel</span>
                     </button>
