--- a/src/main/webapp/app/entities/study/study-dialog.component.html
+++ b/src/main/webapp/app/entities/study/study-dialog.component.html
@@ -24,9 +24,18 @@
                 [(ngModel)]="study.description"  ></textarea>
         </div>
         <div class="form-group">
-            <label class="form-control-label" for="field_incentive">Incentive</label>
-            <textarea class="form-control" name="incentive" id="field_incentive"
-                [(ngModel)]="study.incentive"  ></textarea>
+            <label class="form-control-label" for="field_incentive_type">Incentive Type</label>
+            <select class="form-control" [(ngModel)]="study.incentiveType"
+                    name="incentiveType" id="field_incentive_type">
+                <option value="One-off payment">One-off payment</option>
+                <option value="Randomly allocated">Randomly allocated</option>
+                <option value="Other">Other</option>
+            </select>
+        </div>
+        <div class="form-group">
+            <label class="form-control-label" for="field_incentive_detail">Incentive Details (ie amount)</label>
+            <textarea class="form-control" name="incentiveDetail" id="field_incentive_detail"
+                      [(ngModel)]="study.incentiveDetail"></textarea>
         </div>
         <div class="form-group">
             <label for="field_participant">Participants</label>
