Add front-end changes for incentives.

--- a/src/main/webapp/app/entities/study/study-dialog.component.html
+++ b/src/main/webapp/app/entities/study/study-dialog.component.html
@@ -27,9 +27,9 @@
             <label class="form-control-label" for="field_incentive_type">Incentive Type</label>
             <select class="form-control" [(ngModel)]="study.incentiveType"
                     name="incentiveType" id="field_incentive_type">
-                <option value="One-off payment">One-off payment</option>
-                <option value="Randomly allocated">Randomly allocated</option>
-                <option value="Other">Other</option>
+                <option value="ONEOFFPAYMENT">One-off payment</option>
+                <option value="RANDOMLYALLOCATED">Randomly allocated</option>
+                <option value="OTHER">Other</option>
             </select>
         </div>
         <div class="form-group">
