--- a/src/main/webapp/app/entities/study/study-detail.component.html
+++ b/src/main/webapp/app/entities/study/study-detail.component.html
@@ -29,7 +29,8 @@
 
     <button type="submit"
             (click)="previousState()"
-            class="btn btn-info">
+            class="btn btn-info"
+            style = "background-color:LightSlateGrey; border-color:LightSlateGrey">
         <span class="fa fa-arrow-left"></span>&nbsp;<span> Back</span>
     </button>
 
