Added shadow to welcome text. Fixed Typo

--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -16,7 +16,7 @@
     <div class="user-section column left">
         <span class="main-info">
             <h1> Your fastest </br> way of gathering </br> research data </h1>
-            <p > Acquire important research data while </br> making users experiance pleasant.</p>                       
+            <p > Acquire important research data while </br> making users experience pleasant.</p>                       
         </span>
 
         <div *ngSwitchCase="true">
