Implemented password validation on registration and settings pages (this is a squashed version)
Delete Entities tab

Fixed the input box bounding error from Issue#27 (PR #66)

Current password input box was set bunded to new password input box. So same error will display for both when new password box is invalid. Fixed it so that current password input box has its own error association.

--- a/src/main/webapp/app/account/password/password.component.html
+++ b/src/main/webapp/app/account/password/password.component.html
@@ -19,10 +19,10 @@
             <form name="form" role="form" (ngSubmit)="changePassword()" #passwordForm="ngForm">
                     <div class="form-group">
                             <label class="form-control-label" for="currentPassword">Current password</label>
-                            <input (keydown.backspace) = "unblockErrors(1)" type="password" class="form-control" id="currentPassword" name="currentPassword" #currentPasswordInput="ngModel"
+                            <input type="password" class="form-control" id="currentPassword" name="currentPassword" #currentPasswordInput="ngModel"
                             placeholder="Current password"
                                    [(ngModel)]="currentPassword" minlength=4 maxlength=50 required>
-                            <div *ngIf="currentPasswordInput.dirty && currentPasswordInput.invalid && !errorBlock1" >
+                            <div *ngIf="currentPasswordInput.dirty && currentPasswordInput.invalid">
                                 <small class="form-text text-danger"
                                    *ngIf="currentPasswordInput.errors.required">
                                     Your password is required.
@@ -39,10 +39,10 @@
                     </div>
                 <div class="form-group">
                     <label class="form-control-label" for="password"> New password</label>
-                    <input (keydown.backspace) = "unblockErrors(2)" type="password" class="form-control" id="password" name="password" #passwordInput="ngModel"
+                    <input type="password" class="form-control" id="password" name="password" #passwordInput="ngModel"
                     placeholder="New password"
                            [(ngModel)]="password" minlength=4 maxlength=50 required validateEqual="confirmPassword" editingNew="true">
-                    <div *ngIf="passwordInput.dirty && passwordInput.invalid && !errorBlock2">
+                    <div *ngIf="passwordInput.dirty && passwordInput.invalid">
                         <small class="form-text text-danger"
                            *ngIf="passwordInput.errors.required">
                             Your password is required.
@@ -60,10 +60,10 @@
                 </div>
                 <div class="form-group">
                     <label class="form-control-label" for="confirmPassword">New password confirmation</label>
-                    <input (keydown.backspace) = "unblockErrors(3)" type="password" class="form-control" id="confirmPassword" name="confirmPassword" #confirmPasswordInput="ngModel"
+                    <input type="password" class="form-control" id="confirmPassword" name="confirmPassword" #confirmPasswordInput="ngModel"
                     placeholder="Confirm the new password"
                            [(ngModel)]="confirmPassword" minlength=4 maxlength=50 required validateEqual="password">
-                    <div *ngIf="confirmPasswordInput.dirty && confirmPasswordInput.invalid && !errorBlock3">
+                    <div *ngIf="confirmPasswordInput.dirty && confirmPasswordInput.invalid">
                         <small class="form-text text-danger"
                            *ngIf="confirmPasswordInput.errors.required">
                             Your confirmation password is required.
