Delete Entities tab
Fixed the input box bounding error from Issue#27 (PR #66)

Current password input box was set bunded to new password input box. So same error will display for both when new password box is invalid. Fixed it so that current password input box has its own error association.

--- a/src/main/webapp/app/account/password/password.component.html
+++ b/src/main/webapp/app/account/password/password.component.html
@@ -18,7 +18,7 @@
                 </div>
             <form name="form" role="form" (ngSubmit)="changePassword()" #passwordForm="ngForm">
                     <div class="form-group">
-                            <label class="form-control-label" for="password">Current password</label>
+                            <label class="form-control-label" for="currentPassword">Current password</label>
                             <input type="password" class="form-control" id="currentPassword" name="currentPassword" #currentPasswordInput="ngModel"
                             placeholder="Current password"
                                    [(ngModel)]="currentPassword" minlength=4 maxlength=50 required>
@@ -26,6 +26,14 @@
                                 <small class="form-text text-danger"
                                    *ngIf="currentPasswordInput.errors.required">
                                     Your password is required.
+                                </small>
+                                <small class="form-text text-danger"
+                                *ngIf="currentPasswordInput.errors.minlength">
+                                    Your password is required to be at least 4 characters.
+                                </small>
+                                <small class="form-text text-danger"
+                                *ngIf="currentPasswordInput.errors.maxlength">
+                                    Your password cannot be longer than 50 characters.
                                 </small>
                             </div>
                     </div>
